fix carousel gap

--- a/frontend/src/components/Section.css
+++ b/frontend/src/components/Section.css
@@ -25,7 +25,7 @@
 }
 
 .card {
-  margin: 0rem 5rem 15px 5rem;
+  margin: 0rem 1rem 15px 1rem;
   border-radius: 0.7rem;
   box-shadow: 0px 3px 7px 0px rgba(58, 58, 58, 0.83);
 }
@@ -153,6 +153,6 @@ ul {
     overflow: hidden;
   }
   .display-main {
-    gap: 4.7rem;
+    gap: 2rem;
   }
 }
